Add tests for builtin subtypes